--- a/src/globalStyles/App.scss
+++ b/src/globalStyles/App.scss
@@ -1,4 +1,5 @@
-@import './variablesNMixins.scss';
+@import './variablesNMixins';
+@import './setup';
 
 html {
     font-size: 120%;
@@ -17,8 +18,14 @@ h2 {
     font-size: 1.5rem;
 }
 
+img {
+    width: 100%;
+    display: block;
+}
+
 ul {
-  list-style: none;
+    list-style: none;
+    padding: 0;
 }
 
 p {
