some palette styles

--- a/src/Components/ColorFolder/ColorPalette.css
+++ b/src/Components/ColorFolder/ColorPalette.css
@@ -2,10 +2,13 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
+  width: 25%;
+  overflow-y: hidden;
+  height: 30px;
 }
 
 .colorPalette ul li {
   display: inline-block;
+  margin: 2px;
 }
 /*# sourceMappingURL=ColorPalette.css.map */
