--- a/src/globalStyles/App.scss
+++ b/src/globalStyles/App.scss
@@ -6,7 +6,71 @@ html {
 }
 
 body {
+    background:url("../images/marble.jpg");
+    background-size: cover;
     margin: 0;
+}
+
+
+.hamTopContainer{
+    background:black;
+    color:white;
+    display:flex;
+}
+
+.titlePageContainer{
+    height:50vh;
+    padding-left:1.5rem;
+    padding-top:2rem;
+    
+}
+
+.headerContainer{
+    width:80%;
+    position:relative;
+}
+
+h1{
+    margin:0;
+    padding:.5rem;
+    font-size:1.8rem;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    background-color:rgba(207, 255, 49, 0.6);
+    border-radius: .15rem;
+
+    span{
+        font-size:2.5rem;
+    }
+
+    &::after{
+            content:"";
+            width:110%;
+            height:10%;
+            position: absolute;
+            left:.5rem;
+            bottom:10%;
+            background-color:rgba(96, 86, 249, .9);
+        }
+    }
+
+.titleP{
+    margin-top:1rem;
+    font-size:.9rem;
+    letter-spacing: .05rem;
+}
+    
+h3{
+    margin:0;
+    padding: .5rem 0 0 .5rem;
+    font-size:.8rem;
+    text-transform: uppercase;
+    font-family:$headerFont;
+    letter-spacing: .15rem;
+
+    span{
+    font-size:1rem;  
+    }
 }
 
 h1,
@@ -33,8 +97,10 @@ p {
     font-family: $baseFont;
 }
 
-button {
+.MuiButton-Label {
     font-family: $baseFont;
+    color:white;
+    border:1px solid white;
 }
 
 .wrapper {
@@ -43,3 +109,16 @@ button {
     max-width: 1800px;
 }
 
+footer{
+    background:black;
+
+    p{
+        font-size:.5rem;
+        color:$light;
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: .1rem;
+        margin:0;
+        padding:.5rem;
+    }
+}
