--- a/src/Components/QueryForm/QueryForm.scss
+++ b/src/Components/QueryForm/QueryForm.scss
@@ -5,13 +5,17 @@
 .searchButton, 
 #type {
     background: #f1f0fc;
-    border: .15rem solid $primary; 
+    border: .1rem solid white; 
     border-radius: .25rem;
     padding: 0 .5rem;
     h2{
-        color: $primary;
+        color: white;
         margin: 0.5rem 0; 
     }
+}
+
+.formContainer {
+    background: rgba(96, 86, 249, 0.9);
 }
 
 .filterContainer {
@@ -27,22 +31,45 @@
     }
 }
 
+.buttonArea {
+    margin: 0 auto;
+}
+
 .searchButton {
-    background: $primary;
-    color: white; 
+    background: $accent;
+    color: black; 
     text-transform: uppercase;
     margin: 1rem auto; 
     display: block; 
-    width: 300px;
+    width: 10rem;
+    border: .15rem solid $light;
+    transition: all ease-in .2s;
+    letter-spacing: .1rem;
+    padding: .25rem 0;
     &:hover, 
     &:focus, 
     &:active {
-        border: .15rem solid $primary; 
-        background: $accent;
+        background: white;
         color: $primary; 
     }
 }
 
 .filterErrorMessage {
     color: red; 
+}
+
+@media (min-width:700px) {
+    form {
+        display: flex;
+    }
+    
+    .buttonArea {
+        display: flex;
+        flex-direction: column;
+        .searchButton {
+            margin: 0;
+        }
+    }
+    
+    
 }
