--- a/src/Components/SingleFolder/_singleProductCard.scss
+++ b/src/Components/SingleFolder/_singleProductCard.scss
@@ -3,7 +3,7 @@ div.singleContainer {
     margin: 1rem auto 0;
     background: #f1f0fc;
     color: #6056f9;
-    border: .15rem solid #cfff31;
+    border: .1rem solid black;
     padding: .5rem;
     border-radius: .25rem;
     position: relative;
