--- a/src/Components/ColorFolder/ColorPalette.scss
+++ b/src/Components/ColorFolder/ColorPalette.scss
@@ -1,9 +1,9 @@
 
 .colorPalette{
     display:flex;
-    width:25%;
-    overflow-y: hidden;
-    height:30px;
+    // width:25%;
+    // overflow-y: hidden;
+    // height:30px;
     ul{
         li{
             display: inline-block;
