--- a/src/Components/Drawer/drawer.css
+++ b/src/Components/Drawer/drawer.css
@@ -164,145 +164,4 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
-.visuallyHidden:not(:focus):not(:active) {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0);
-  overflow: hidden;
-}
-
-html {
-  font-size: 120%;
-}
-
-body {
-  background: url("../images/marble.jpg");
-  background-size: cover;
-  margin: 0;
-  font-family: "Lato", sans-serif;
-}
-
-.hamTopContainer {
-  background: black;
-  color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.titlePageContainer {
-  padding-top: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 90vh;
-}
-
-.headerContainer {
-  width: 80%;
-  position: relative;
-  max-width: 15rem;
-}
-
-h1 {
-  margin-left: 1rem;
-  padding: .5rem;
-  font-size: 1.8rem;
-  text-transform: uppercase;
-  letter-spacing: .2rem;
-  background-color: rgba(207, 255, 49, 0.6);
-  border-radius: .15rem;
-}
-
-h1 span {
-  font-size: 2.5rem;
-}
-
-h1::after {
-  content: "";
-  width: 110%;
-  height: 10%;
-  position: absolute;
-  left: .5rem;
-  bottom: 10%;
-  background-color: rgba(96, 86, 249, 0.9);
-}
-
-.titleP {
-  margin-top: 1rem;
-  margin-left: 1rem;
-  font-size: .9rem;
-  letter-spacing: .05rem;
-}
-
-h3 {
-  margin: 0;
-  padding: .5rem 0 0 .5rem;
-  font-size: .8rem;
-  text-transform: uppercase;
-  font-family: "Josefin Slab", serif;
-  letter-spacing: .15rem;
-}
-
-h3 span {
-  font-size: 1rem;
-}
-
-h1,
-h2 {
-  font-family: "Josefin Slab", serif;
-}
-
-h2 {
-  font-size: 1rem;
-}
-
-img {
-  width: 100%;
-  display: block;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.wrapper {
-  width: 98%;
-  margin: 0 auto;
-  max-width: 1800px;
-}
-
-footer {
-  background: black;
-}
-
-footer p {
-  font-size: .5rem;
-  color: #f1f0fc;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: .1rem;
-  margin: 0;
-  padding: .5rem;
-}
-/*# sourceMappingURL=App.css.map */
+/*# sourceMappingURL=drawer.css.map */
