--- a/src/Components/QueryForm/QueryForm.css
+++ b/src/Components/QueryForm/QueryForm.css
@@ -305,4 +305,96 @@ footer p {
   margin: 0;
   padding: .5rem;
 }
-/*# sourceMappingURL=App.css.map */
+
+.formContainer,
+.slider,
+.searchButton,
+#type {
+  background: #f1f0fc;
+  border: .1rem solid white;
+  border-radius: .25rem;
+  padding: 0 .5rem;
+}
+
+.formContainer h2,
+.slider h2,
+.searchButton h2,
+#type h2 {
+  color: white;
+  margin: 0.5rem 0;
+}
+
+.formContainer {
+  background: rgba(96, 86, 249, 0.9);
+  padding-bottom: 1rem;
+}
+
+.filterContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.filterContainer .priceFilter,
+.filterContainer .categoryFilter {
+  width: 48%;
+}
+
+.filterContainer select {
+  width: 100%;
+}
+
+.buttonArea {
+  margin: 0 auto;
+  text-align: center;
+  margin-top: .75rem;
+}
+
+.searchButton {
+  background: #cfff31;
+  color: black;
+  text-transform: uppercase;
+  margin: 1rem auto;
+  display: block;
+  width: 10rem;
+  border: 0.15rem solid #f1f0fc;
+  -webkit-transition: all ease-in .2s;
+  transition: all ease-in .2s;
+  letter-spacing: .1rem;
+  padding: .25rem 0;
+}
+
+.searchButton:hover, .searchButton:focus, .searchButton:active {
+  background: white;
+  color: #6056f9;
+}
+
+label {
+  margin-top: 10px;
+}
+
+.filterErrorMessage {
+  background: rgba(255, 0, 0, 0.5);
+  color: white;
+  border-radius: .25rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding: .25rem;
+}
+
+@media (min-width: 700px) {
+  form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .searchButton {
+    margin: 1rem;
+  }
+}
+/*# sourceMappingURL=QueryForm.css.map */
