--- a/src/Components/ColorFolder/ColorPalette.css
+++ b/src/Components/ColorFolder/ColorPalette.css
@@ -2,6 +2,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 62px;
+  overflow-y: scroll;
 }
 
 .colorPalette ul li {
