added loading state and styles to it

--- a/src/Components/globalStyles/App.scss
+++ b/src/Components/globalStyles/App.scss
@@ -121,3 +121,10 @@ footer{
         padding:.5rem;
     }
 }
+
+.loadingState {
+    margin: auto;
+    text-align: center;
+    width: 10%;
+    padding: .5rem 0;
+}
