--- a/src/Components/QueryForm/QueryForm.scss
+++ b/src/Components/QueryForm/QueryForm.scss
@@ -63,6 +63,7 @@ label {
 }
 
 .filterErrorMessage {
+    font-size: 0.8rem;
     background: rgba(255, 0, 0, 0.5);
     color: white;
     border-radius: .25rem;
@@ -77,7 +78,11 @@ label {
     }
 
     .searchButton {
-    margin: 1rem; 
+    margin: 1.5rem .5rem 0 .5rem; 
+    }
+
+    .formContainer h2{
+        font-size:1.5rem;
     }
 
 }
