--- a/src/Components/RemoveButtonFolder/_removeButton.scss
+++ b/src/Components/RemoveButtonFolder/_removeButton.scss
@@ -2,6 +2,7 @@
     background: transparent;
     border: none;
     margin-top: .25rem;
+    font-size: 2.25rem;
     &:hover,
     &:focus {
         transform:scale(1.3);
@@ -10,4 +11,8 @@
     &:focus {
         outline: dashed .01rem black;
     }
+}
+
+.MuiSvgIcon-root {
+    font-size: 2.25rem;
 }
