--- a/src/Components/globalStyles/App.scss
+++ b/src/Components/globalStyles/App.scss
@@ -27,7 +27,7 @@ body {
     display: flex; 
     flex-direction: column; 
     justify-content: space-between; 
-    height: 85vh; 
+    height: 90vh; 
 }
 
 .headerContainer{
@@ -133,7 +133,7 @@ footer{
     .headerContainer{
         width:80%;
         max-width:25rem; 
-        margin-top:5rem;
+        
     }   
 
     h1{
@@ -176,6 +176,7 @@ footer{
     .headerContainer{
         width:90%;
         max-width:30rem; 
+        margin-top:3rem;
     }   
 
     h1{
@@ -196,7 +197,7 @@ footer{
 
     .titleP{
         margin:0 0 0 4rem;
-        font-size:1.8rem;
+        font-size:1.6rem;
         letter-spacing: .05rem;
     }
 
@@ -212,6 +213,7 @@ footer{
     .headerContainer{
         width:95%;
         max-width:40rem; 
+        margin-bottom:1rem;
     }   
 
     h1{
@@ -232,7 +234,7 @@ footer{
 
     .titleP{
         margin:0 0 0 4rem;
-        font-size:2rem;
+        font-size:1.9rem;
         letter-spacing: .4rem;
     }
 
