active page button added

--- a/src/Components/Pages/Pages.scss
+++ b/src/Components/Pages/Pages.scss
@@ -15,4 +15,8 @@
         background: #6F66F9;
         color:#fff;
     }
+    .pressed{
+        background: #6F66F9;
+        color:#fff;
+    }
 }
