changed the layouts of elements on the product cards

--- a/src/Components/SingleFolder/_singleProductCard.scss
+++ b/src/Components/SingleFolder/_singleProductCard.scss
@@ -11,6 +11,7 @@ div.singleContainer {
         word-wrap: break-word;
         padding-top: .7rem;
         font-weight: bolder;
+        min-height: 6rem;
     }
     h3 {
         font-style: italic;
@@ -52,6 +53,7 @@ div.singleContainer {
 @media (min-width: 750px) {
     div.singleContainer h2 {
         font-size: 1.65rem;
+        min-height: 12rem;
     }
     
     div.singleContainer h3 {
